# PaCE-Man

./: CMakeLists.txt  main.c
Game/: game.c  game.h
Game/Headers/: game.h
Game/Souces/: game.c
JSON/Headers/: json_builder.h
JSON/Sources/: json_builder.c
Pathing/: voraz.c  voraz.h
Server/Headers/: server.h
Server/Sources/: server.c
org.eclipse.ui.examples.multipageeditor/: sample.properties
paCEman/: .classpath  .project
paCEman/Resources/: Configuration.properties
paCEman/src/tec/ac/cr/CE3104/paCEman/GUI/: CreateGame.java  PaCEman.java  PaCEmanFrame.java  adfd.java
paCEman/src/tec/ac/cr/CE3104/paCEman/main/: Main.java
paCEman/src/tec/ac/cr/CE3104/paCEman/network/: SimpleSocketClient.java
paCEman/src/tec/ac/cr/CE3104/paCEman/processes/: Facade.java  JsonBuilderForPaCEman.java
paCEman/src/tec/ac/cr/CE3104/paCEman/programConstraints/: Constraints.java
paCEman/src/tec/ac/cr/CE3104/paCEman/propertyLoader/: Properties.java  ReadProperties.java
src/: SimpleSocketClient.java
